; ModuleID = '/home/carl/AnghaBench/numpy/numpy/random/src/mt19937/extr_randomkit.c_rk_random_uint64.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/random/src/mt19937/extr_randomkit.c_rk_random_uint64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rk_random_uint64(i32 %0, i32 %1, i64 %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %14 = load i32, i32* %7, align 4
  store i32 %14, i32* %12, align 4
  %15 = load i32, i32* %7, align 4
  %16 = icmp eq i32 %15, 0
  br i1 %16, label %17, label %31

17:                                               ; preds = %5
  store i64 0, i64* %13, align 8
  br label %18

18:                                               ; preds = %27, %17
  %19 = load i64, i64* %13, align 8
  %20 = load i64, i64* %8, align 8
  %21 = icmp ult i64 %19, %20
  br i1 %21, label %22, label %30

22:                                               ; preds = %18
  %23 = load i32, i32* %6, align 4
  %24 = load i32*, i32** %9, align 8
  %25 = load i64, i64* %13, align 8
  %26 = getelementptr inbounds i32, i32* %24, i64 %25
  store i32 %23, i32* %26, align 4
  br label %27

27:                                               ; preds = %22
  %28 = load i64, i64* %13, align 8
  %29 = add i64 %28, 1
  store i64 %29, i64* %13, align 8
  br label %18

30:                                               ; preds = %18
  br label %94

31:                                               ; preds = %5
  %32 = load i32, i32* %12, align 4
  %33 = ashr i32 %32, 1
  %34 = load i32, i32* %12, align 4
  %35 = or i32 %34, %33
  store i32 %35, i32* %12, align 4
  %36 = load i32, i32* %12, align 4
  %37 = ashr i32 %36, 2
  %38 = load i32, i32* %12, align 4
  %39 = or i32 %38, %37
  store i32 %39, i32* %12, align 4
  %40 = load i32, i32* %12, align 4
  %41 = ashr i32 %40, 4
  %42 = load i32, i32* %12, align 4
  %43 = or i32 %42, %41
  store i32 %43, i32* %12, align 4
  %44 = load i32, i32* %12, align 4
  %45 = ashr i32 %44, 8
  %46 = load i32, i32* %12, align 4
  %47 = or i32 %46, %45
  store i32 %47, i32* %12, align 4
  %48 = load i32, i32* %12, align 4
  %49 = ashr i32 %48, 16
  %50 = load i32, i32* %12, align 4
  %51 = or i32 %50, %49
  store i32 %51, i32* %12, align 4
  %52 = load i32, i32* %12, align 4
  %53 = ashr i32 %52, 32
  %54 = load i32, i32* %12, align 4
  %55 = or i32 %54, %53
  store i32 %55, i32* %12, align 4
  store i64 0, i64* %13, align 8
  br label %56

56:                                               ; preds = %91, %31
  %57 = load i64, i64* %13, align 8
  %58 = load i64, i64* %8, align 8
  %59 = icmp ult i64 %57, %58
  br i1 %59, label %60, label %94

60:                                               ; preds = %56
  %61 = load i32, i32* %7, align 4
  %62 = sext i32 %61 to i64
  %63 = icmp ule i64 %62, 4294967295
  br i1 %63, label %64, label %74

64:                                               ; preds = %60
  br label %65

65:                                               ; preds = %72, %64
  %66 = load i32*, i32** %10, align 8
  %67 = call i32 @rk_uint32(i32* %66)
  %68 = load i32, i32* %12, align 4
  %69 = and i32 %67, %68
  store i32 %69, i32* %11, align 4
  %70 = load i32, i32* %7, align 4
  %71 = icmp sgt i32 %69, %70
  br i1 %71, label %72, label %73

72:                                               ; preds = %65
  br label %65

73:                                               ; preds = %65
  br label %84

74:                                               ; preds = %60
  br label %75

75:                                               ; preds = %82, %74
  %76 = load i32*, i32** %10, align 8
  %77 = call i32 @rk_uint64(i32* %76)
  %78 = load i32, i32* %12, align 4
  %79 = and i32 %77, %78
  store i32 %79, i32* %11, align 4
  %80 = load i32, i32* %7, align 4
  %81 = icmp sgt i32 %79, %80
  br i1 %81, label %82, label %83

82:                                               ; preds = %75
  br label %75

83:                                               ; preds = %75
  br label %84

84:                                               ; preds = %83, %73
  %85 = load i32, i32* %6, align 4
  %86 = load i32, i32* %11, align 4
  %87 = add nsw i32 %85, %86
  %88 = load i32*, i32** %9, align 8
  %89 = load i64, i64* %13, align 8
  %90 = getelementptr inbounds i32, i32* %88, i64 %89
  store i32 %87, i32* %90, align 4
  br label %91

91:                                               ; preds = %84
  %92 = load i64, i64* %13, align 8
  %93 = add i64 %92, 1
  store i64 %93, i64* %13, align 8
  br label %56

94:                                               ; preds = %30, %56
  ret void
}

declare dso_local i32 @rk_uint32(i32*) #1

declare dso_local i32 @rk_uint64(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
